# autocycle

./: .gitignore  2021-05-09-14-13-14.bag  Assistant.py  CMakeLists.txt  GUI.py  LineSeg.py  Obstacle.py  README.md  TestData  WriteData.py  bag.txt  bet.txt  bezier.kv  bezier_visualization.py  bezierlib.py  get_ip.py  nav.launch  output_data.txt  pKey  pKey.pub  package.xml  parse_lvx.cpp  ros_bag.txt  ros_info.txt  run_lidar.cpp  setup.py  sim_driver.py  start_nav.cpp  tash
LiDAR/: CMakeLists.txt  ParseLVX.cpp  ParseLVX.py
PathPlanning/: bezier_visualization.py
msg/: Curve.msg  LvxPoint.msg  Object.msg  ObjectList.msg
ros/src/autocycle/: CMakeLists.txt  bezier_visualization.py  nav.launch  package.xml  parse_lvx.cpp  run_lidar.cpp  start_nav.cpp
ros/src/autocycle/LiDAR/: ParseLVX.py  a.out
ros/src/autocycle/PathPlanning/: Citations
ros/src/autocycle/main/: README.md
ros/src/autocycle/main/LiDAR/: ParseLVX.cpp
ros/src/autocycle/main/PathPlanning/: Assistant.py  Obstacle.py  bezier_visualization.py
ros/src/autocycle/msg/: LvxData.msg  ObjectList.msg
ros/src/autocycle/src/autocycle_py/: bezier_visualization.py
ros/src/autocycle/srv/: LvxData.srv
src/: .get_data.cpp.swp  .start_nav.cpp.swn  .start_nav.cpp.swo  bruh.cpp  fix_roll.cpp  frame_ready.cpp  generate_curve.cpp  get_curve.cpp  get_data.cpp  get_heading.cpp  get_roll.cpp  get_tracking_frame.cpp  nav.launch  object_detection.cpp  object_detection.py  object_list_getter.cpp  parse_lvx.cpp  read_serial.cpp  run_lidar.cpp  send_action.cpp  start_nav.cpp  static_object_tracking.cpp  static_object_tracking.py  systems_test.launch  test.launch
src/autocycle_py/: .object_detection.py.swo  .object_detection.py.swp  .start_data.py.swp  Untitled.ipynb  bezier_visualization.py  bruh.py  calculate_deltas.py  deploy_actuators.py  generate_curve.py  get_deltas.py  gps_directions.py  object_detection.py  read_rosbag.py  ready_to_start.py  retract_actuators.py  start_all_systems.py  start_data.py  start_movement.py  static_object_tracking.py  testing.py  yoten.py
src/autocycle_py/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  object_detection-checkpoint.py  static_object_tracking-checkpoint.py
srv/: Action.srv  DetectObjects.srv  GetCurve.srv  GetData.srv  GetTrackingFrame.srv  Lidar.srv  LvxData.srv  ObjectDetectionList.srv  ObjectList.srv  Roll.srv  RollAdj.srv
test/: collect_lidar_data.cpp  collect_lidar_data.launch  simulated_nav.cpp  start_nav_no_bike.launch  test_bezier.cpp  test_bezier.launch  test_bike_no_move.launch  test_fake_send_action.cpp  test_gen_param.cpp  test_get_param.launch  test_nav_predefined_curve.cpp  test_nav_predefined_curve.launch  test_obj_to_ard.cpp  test_obj_to_ard.launch  test_pi_to_ard.cpp  test_pi_to_ard.launch  test_roll.launch  test_roll_adj.cpp  test_roll_publisher.cpp  test_send_only_ang.cpp  test_serial.cpp  test_serial.launch  test_serial_read.cpp  test_serial_read.launch  test_serial_write.cpp  test_serial_write.launch  test_sim_sensors.cpp  test_start_nav_one_frame.cpp  test_visualize_lidar.cpp  test_visualizer.launch
