<?xml version="1.0"?>
<package format="2">
  <name>autocycle</name>
  <version>0.1.0</version>
  <description>This package is responsible for managing communication between different aspects of navigation for Otto Von Cycle</description>
  <maintainer email="andoniesanguesa@gmail.com">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
